# monty_hall

./: .gitignore  CMakeLists.txt  Monty Hall Simulator.odt  README  TODO
include/: standard.h
src/: isaac64.c  monty_hall.c
